--- a/TTSegTool/Resources/UI/TTSegTool.ui
+++ b/TTSegTool/Resources/UI/TTSegTool.ui
@@ -12,8 +12,8 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
-    <widget class="ctkCollapsibleButton" name="inputsCollapsibleButton">
-     <property name="text">
+    <widget class="ctkCollapsibleButton" name="inputsCollapsibleButton" native="true">
+     <property name="text" stdset="0">
       <string>Inputs</string>
      </property>
      <layout class="QFormLayout" name="formLayout_2">
@@ -32,14 +32,14 @@
        </widget>
       </item>
       <item row="1" column="1">
-       <widget class="ctkDirectoryButton" name="imageDirButton">
+       <widget class="ctkDirectoryButton" name="imageDirButton" native="true">
         <property name="focusPolicy">
          <enum>Qt::TabFocus</enum>
         </property>
        </widget>
       </item>
       <item row="3" column="1">
-       <widget class="ctkDirectoryButton" name="segmenationDirButton">
+       <widget class="ctkDirectoryButton" name="segmenationDirButton" native="true">
         <property name="focusPolicy">
          <enum>Qt::TabFocus</enum>
         </property>
@@ -78,8 +78,8 @@
     </widget>
    </item>
    <item>
-    <widget class="ctkCollapsibleButton" name="navigationCollapsibleButton">
-     <property name="text">
+    <widget class="ctkCollapsibleButton" name="navigationCollapsibleButton" native="true">
+     <property name="text" stdset="0">
       <string>Navigation</string>
      </property>
      <layout class="QFormLayout" name="formLayout_4">
@@ -120,7 +120,7 @@
     </widget>
    </item>
    <item>
-    <widget class="ctkCollapsibleButton" name="imagePatchCollapsibleButton">
+    <widget class="ctkCollapsibleButton" name="imagePatchCollapsibleButton" native="true">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
        <horstretch>0</horstretch>
@@ -133,10 +133,10 @@
        <height>150</height>
       </size>
      </property>
-     <property name="text">
+     <property name="text" stdset="0">
       <string>Ground Truth Patch Marking</string>
      </property>
-     <property name="collapsed">
+     <property name="collapsed" stdset="0">
       <bool>false</bool>
      </property>
      <layout class="QFormLayout" name="formLayout_3">
@@ -153,8 +153,7 @@
          </widget>
         </item>
         <item>
-         <widget class="QComboBox" name="patchLabelComboBox">
-         </widget>
+         <widget class="QComboBox" name="patchLabelComboBox"/>
         </item>
         <item>
          <widget class="QPushButton" name="delPatchPushButton">
@@ -209,29 +208,31 @@
     </widget>
    </item>
    <item>
-    <widget class="ctkCollapsibleButton" name="segmentEditorCollapsibleButton">
+    <widget class="ctkCollapsibleButton" name="segmentEditorCollapsibleButton" native="true">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Minimum" vsizetype="MinimumExpanding">
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
      </property>
-     <property name="text">
+     <property name="text" stdset="0">
       <string>Segmentation Editor</string>
      </property>
-     <property name="collapsed">
-      <bool>true</bool>
+     <property name="collapsed" stdset="0">
+      <bool>false</bool>
      </property>
-     <widget class="qMRMLSegmentEditorWidget" name="SegmentEditorWidget">
-      <property name="geometry">
-       <rect>
-        <x>0</x>
-        <y>20</y>
-        <width>471</width>
-        <height>416</height>
-       </rect>
-      </property>
-     </widget>
+     <layout class="QVBoxLayout" name="verticalLayout_3">
+      <item>
+       <widget class="QCheckBox" name="showSegmentationCheckBox">
+        <property name="text">
+         <string>Show Segmentation</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="qMRMLSegmentEditorWidget" name="SegmentEditorWidget" native="true"/>
+      </item>
+     </layout>
     </widget>
    </item>
    <item>
@@ -271,6 +272,7 @@
    <class>qMRMLSegmentEditorWidget</class>
    <extends>qMRMLWidget</extends>
    <header>qMRMLSegmentEditorWidget.h</header>
+   <container>1</container>
   </customwidget>
  </customwidgets>
  <tabstops>
