--- a/TTSegTool/Resources/UI/TTSegTool.ui
+++ b/TTSegTool/Resources/UI/TTSegTool.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>503</width>
-    <height>685</height>
+    <width>538</width>
+    <height>907</height>
    </rect>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
@@ -16,61 +16,73 @@
      <property name="text" stdset="0">
       <string>Inputs</string>
      </property>
-     <layout class="QFormLayout" name="formLayout_2">
-      <item row="1" column="0">
-       <widget class="QLabel" name="label">
+     <layout class="QVBoxLayout" name="verticalLayout_4">
+      <item>
+       <widget class="QGroupBox" name="groupBox">
+        <property name="title">
+         <string/>
+        </property>
+        <layout class="QGridLayout" name="gridLayout">
+         <item row="1" column="1">
+          <widget class="QPushButton" name="imageFileButton">
+           <property name="focusPolicy">
+            <enum>Qt::TabFocus</enum>
+           </property>
+           <property name="text">
+            <string>Not Selected</string>
+           </property>
+           <property name="checkable">
+            <bool>false</bool>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="0">
+          <widget class="QLabel" name="label_6">
+           <property name="focusPolicy">
+            <enum>Qt::NoFocus</enum>
+           </property>
+           <property name="toolTip">
+            <string>Select the MASTER CSV File</string>
+           </property>
+           <property name="toolTipDuration">
+            <number>5</number>
+           </property>
+           <property name="text">
+            <string>CSV file with image names: </string>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="0">
+          <widget class="QLabel" name="label_2">
+           <property name="text">
+            <string>User name: </string>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="1">
+          <widget class="QLineEdit" name="usernameLineEdit"/>
+         </item>
+         <item row="2" column="0">
+          <widget class="QLabel" name="label">
+           <property name="text">
+            <string>Server Path:</string>
+           </property>
+          </widget>
+         </item>
+         <item row="2" column="1">
+          <widget class="ctkDirectoryButton" name="imageDirButton" native="true">
+           <property name="focusPolicy">
+            <enum>Qt::TabFocus</enum>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="loadCSVPushButton">
         <property name="text">
-         <string>Path to Images:</string>
-        </property>
-       </widget>
-      </item>
-      <item row="3" column="0">
-       <widget class="QLabel" name="label_3">
-        <property name="text">
-         <string>Path to segmentations</string>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="1">
-       <widget class="ctkDirectoryButton" name="imageDirButton" native="true">
-        <property name="focusPolicy">
-         <enum>Qt::TabFocus</enum>
-        </property>
-       </widget>
-      </item>
-      <item row="3" column="1">
-       <widget class="ctkDirectoryButton" name="segmenationDirButton" native="true">
-        <property name="focusPolicy">
-         <enum>Qt::TabFocus</enum>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="0">
-       <widget class="QLabel" name="label_6">
-        <property name="focusPolicy">
-         <enum>Qt::NoFocus</enum>
-        </property>
-        <property name="toolTip">
-         <string>Select CSV File, needs a column 'filename'</string>
-        </property>
-        <property name="toolTipDuration">
-         <number>5</number>
-        </property>
-        <property name="text">
-         <string>CSV file with image names: </string>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="1">
-       <widget class="QPushButton" name="imageFileButton">
-        <property name="focusPolicy">
-         <enum>Qt::TabFocus</enum>
-        </property>
-        <property name="text">
-         <string>Not Selected</string>
-        </property>
-        <property name="checkable">
-         <bool>false</bool>
+         <string>LOAD</string>
         </property>
        </widget>
       </item>
@@ -84,13 +96,6 @@
      </property>
      <layout class="QFormLayout" name="formLayout_4">
       <item row="0" column="0">
-       <widget class="QLabel" name="imagePosLabel">
-        <property name="text">
-         <string>0/0</string>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="1">
        <widget class="QScrollBar" name="imageNavigationScrollBar">
         <property name="focusPolicy">
          <enum>Qt::TabFocus</enum>
@@ -105,11 +110,31 @@
          <number>1</number>
         </property>
         <property name="orientation">
-         <enum>Qt::Horizontal</enum>
+         <enum>Qt::Vertical</enum>
         </property>
        </widget>
       </item>
-      <item row="1" column="1">
+      <item row="0" column="1">
+       <widget class="QTableWidget" name="imageDetailsTable">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="0">
+       <widget class="QLabel" name="imagePosLabel">
+        <property name="text">
+         <string>0/0</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="1">
        <widget class="QLabel" name="imageDetailsLabel">
         <property name="text">
          <string>No Images Selected yet</string>
@@ -134,37 +159,13 @@
       </size>
      </property>
      <property name="text" stdset="0">
-      <string>Ground Truth Patch Marking</string>
+      <string>Patch Sampling</string>
      </property>
      <property name="collapsed" stdset="0">
       <bool>false</bool>
      </property>
-     <layout class="QFormLayout" name="formLayout_3">
-      <item row="0" column="0">
-       <layout class="QHBoxLayout" name="horizontalLayout_2"/>
-      </item>
-      <item row="6" column="1">
-       <layout class="QHBoxLayout" name="horizontalLayout">
-        <item>
-         <widget class="QPushButton" name="keepPatchPushButton">
-          <property name="text">
-           <string>Save Patch Table</string>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QComboBox" name="patchLabelComboBox"/>
-        </item>
-        <item>
-         <widget class="QPushButton" name="delPatchPushButton">
-          <property name="text">
-           <string>Delete Patch</string>
-          </property>
-         </widget>
-        </item>
-       </layout>
-      </item>
-      <item row="1" column="0" colspan="2">
+     <layout class="QHBoxLayout" name="horizontalLayout_2">
+      <item>
        <widget class="QTableWidget" name="imagePatchesTableWidget">
         <property name="sizePolicy">
          <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
@@ -185,13 +186,8 @@
          <number>0</number>
         </property>
         <property name="columnCount">
-         <number>3</number>
+         <number>2</number>
         </property>
-        <column>
-         <property name="text">
-          <string>#</string>
-         </property>
-        </column>
         <column>
          <property name="text">
           <string>Coordinates</string>
@@ -203,6 +199,27 @@
          </property>
         </column>
        </widget>
+      </item>
+      <item>
+       <layout class="QVBoxLayout" name="verticalLayout_5">
+        <item>
+         <widget class="QComboBox" name="patchLabelComboBox"/>
+        </item>
+        <item>
+         <widget class="QPushButton" name="delPatchPushButton">
+          <property name="text">
+           <string>Delete Patch</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QPushButton" name="keepPatchPushButton">
+          <property name="text">
+           <string>Save Patch Table</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
       </item>
      </layout>
     </widget>
@@ -230,22 +247,36 @@
        </widget>
       </item>
       <item>
-       <widget class="qMRMLSegmentEditorWidget" name="SegmentEditorWidget" native="true"/>
+       <widget class="QScrollArea" name="scrollArea">
+        <property name="horizontalScrollBarPolicy">
+         <enum>Qt::ScrollBarAlwaysOff</enum>
+        </property>
+        <property name="widgetResizable">
+         <bool>true</bool>
+        </property>
+        <widget class="QWidget" name="scrollAreaWidgetContents">
+         <property name="geometry">
+          <rect>
+           <x>0</x>
+           <y>0</y>
+           <width>488</width>
+           <height>151</height>
+          </rect>
+         </property>
+         <widget class="qMRMLSegmentEditorWidget" name="SegmentEditorWidget" native="true">
+          <property name="geometry">
+           <rect>
+            <x>0</x>
+            <y>0</y>
+            <width>471</width>
+            <height>416</height>
+           </rect>
+          </property>
+         </widget>
+        </widget>
+       </widget>
       </item>
      </layout>
-    </widget>
-   </item>
-   <item>
-    <widget class="QPushButton" name="applyButton">
-     <property name="enabled">
-      <bool>false</bool>
-     </property>
-     <property name="toolTip">
-      <string>Run the algorithm.</string>
-     </property>
-     <property name="text">
-      <string>Apply</string>
-     </property>
     </widget>
    </item>
   </layout>
@@ -277,13 +308,8 @@
  </customwidgets>
  <tabstops>
   <tabstop>inputsCollapsibleButton</tabstop>
-  <tabstop>imageFileButton</tabstop>
-  <tabstop>imageDirButton</tabstop>
-  <tabstop>segmenationDirButton</tabstop>
   <tabstop>navigationCollapsibleButton</tabstop>
-  <tabstop>imageNavigationScrollBar</tabstop>
   <tabstop>imagePatchCollapsibleButton</tabstop>
-  <tabstop>applyButton</tabstop>
  </tabstops>
  <resources/>
  <connections/>
