--- a/TTSegTool/Resources/UI/TTSegTool.ui
+++ b/TTSegTool/Resources/UI/TTSegTool.ui
@@ -10,6 +10,12 @@
     <height>907</height>
    </rect>
   </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="MinimumExpanding" vsizetype="Preferred">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
+  </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <widget class="ctkCollapsibleButton" name="inputsCollapsibleButton" native="true">
@@ -97,6 +103,12 @@
      <layout class="QFormLayout" name="formLayout_4">
       <item row="0" column="0">
        <widget class="QScrollBar" name="imageNavigationScrollBar">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Fixed" vsizetype="MinimumExpanding">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
         <property name="focusPolicy">
          <enum>Qt::TabFocus</enum>
         </property>
@@ -117,7 +129,7 @@
       <item row="0" column="1">
        <widget class="QTableWidget" name="imageDetailsTable">
         <property name="enabled">
-         <bool>false</bool>
+         <bool>true</bool>
         </property>
         <property name="sizePolicy">
          <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
@@ -138,6 +150,13 @@
        <widget class="QLabel" name="imageDetailsLabel">
         <property name="text">
          <string>No Images Selected yet</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="0">
+       <widget class="QPushButton" name="findUngradedButton">
+        <property name="text">
+         <string>&gt;&gt;</string>
         </property>
        </widget>
       </item>
@@ -260,7 +279,7 @@
            <x>0</x>
            <y>0</y>
            <width>488</width>
-           <height>151</height>
+           <height>143</height>
           </rect>
          </property>
          <widget class="qMRMLSegmentEditorWidget" name="SegmentEditorWidget" native="true">
