--- a/TTSegTool/Resources/UI/TTSegTool.ui
+++ b/TTSegTool/Resources/UI/TTSegTool.ui
@@ -101,6 +101,9 @@
       <string>Navigation</string>
      </property>
      <layout class="QFormLayout" name="formLayout_4">
+      <property name="formAlignment">
+       <set>Qt::AlignHCenter|Qt::AlignTop</set>
+      </property>
       <item row="0" column="0">
        <widget class="QScrollBar" name="imageNavigationScrollBar">
         <property name="sizePolicy">
@@ -146,17 +149,17 @@
         </property>
        </widget>
       </item>
+      <item row="2" column="0">
+       <widget class="QToolButton" name="findUngradedButton">
+        <property name="text">
+         <string>&gt;&gt;</string>
+        </property>
+       </widget>
+      </item>
       <item row="2" column="1">
        <widget class="QLabel" name="imageDetailsLabel">
         <property name="text">
          <string>No Images Selected yet</string>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="0">
-       <widget class="QPushButton" name="findUngradedButton">
-        <property name="text">
-         <string>&gt;&gt;</string>
         </property>
        </widget>
       </item>
@@ -279,7 +282,7 @@
            <x>0</x>
            <y>0</y>
            <width>488</width>
-           <height>143</height>
+           <height>135</height>
           </rect>
          </property>
          <widget class="qMRMLSegmentEditorWidget" name="SegmentEditorWidget" native="true">
