--- a/TTSegTool/Resources/UI/TTSegTool.ui
+++ b/TTSegTool/Resources/UI/TTSegTool.ui
@@ -18,8 +18,8 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
-    <widget class="ctkCollapsibleButton" name="inputsCollapsibleButton" native="true">
-     <property name="text" stdset="0">
+    <widget class="ctkCollapsibleButton" name="inputsCollapsibleButton">
+     <property name="text">
       <string>Inputs</string>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout_4">
@@ -76,7 +76,7 @@
           </widget>
          </item>
          <item row="2" column="1">
-          <widget class="ctkDirectoryButton" name="imageDirButton" native="true">
+          <widget class="ctkDirectoryButton" name="imageDirButton">
            <property name="focusPolicy">
             <enum>Qt::TabFocus</enum>
            </property>
@@ -96,8 +96,8 @@
     </widget>
    </item>
    <item>
-    <widget class="ctkCollapsibleButton" name="navigationCollapsibleButton" native="true">
-     <property name="text" stdset="0">
+    <widget class="ctkCollapsibleButton" name="navigationCollapsibleButton">
+     <property name="text">
       <string>Navigation</string>
      </property>
      <layout class="QFormLayout" name="formLayout_4">
@@ -151,6 +151,9 @@
       </item>
       <item row="2" column="0">
        <widget class="QToolButton" name="findUngradedButton">
+        <property name="toolTip">
+         <string>Move to the next ungraded image</string>
+        </property>
         <property name="text">
          <string>&gt;&gt;</string>
         </property>
@@ -167,7 +170,7 @@
     </widget>
    </item>
    <item>
-    <widget class="ctkCollapsibleButton" name="imagePatchCollapsibleButton" native="true">
+    <widget class="ctkCollapsibleButton" name="imagePatchCollapsibleButton">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
        <horstretch>0</horstretch>
@@ -180,10 +183,10 @@
        <height>150</height>
       </size>
      </property>
-     <property name="text" stdset="0">
+     <property name="text">
       <string>Patch Sampling</string>
      </property>
-     <property name="collapsed" stdset="0">
+     <property name="collapsed">
       <bool>false</bool>
      </property>
      <layout class="QHBoxLayout" name="horizontalLayout_2">
@@ -247,17 +250,17 @@
     </widget>
    </item>
    <item>
-    <widget class="ctkCollapsibleButton" name="segmentEditorCollapsibleButton" native="true">
+    <widget class="ctkCollapsibleButton" name="segmentEditorCollapsibleButton">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Minimum" vsizetype="MinimumExpanding">
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
      </property>
-     <property name="text" stdset="0">
+     <property name="text">
       <string>Segmentation Editor</string>
      </property>
-     <property name="collapsed" stdset="0">
+     <property name="collapsed">
       <bool>false</bool>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout_3">
@@ -281,11 +284,11 @@
           <rect>
            <x>0</x>
            <y>0</y>
-           <width>488</width>
-           <height>135</height>
+           <width>498</width>
+           <height>119</height>
           </rect>
          </property>
-         <widget class="qMRMLSegmentEditorWidget" name="SegmentEditorWidget" native="true">
+         <widget class="qMRMLSegmentEditorWidget" name="SegmentEditorWidget">
           <property name="geometry">
            <rect>
             <x>0</x>
@@ -330,8 +333,22 @@
  </customwidgets>
  <tabstops>
   <tabstop>inputsCollapsibleButton</tabstop>
+  <tabstop>usernameLineEdit</tabstop>
+  <tabstop>imageFileButton</tabstop>
+  <tabstop>imageDirButton</tabstop>
+  <tabstop>loadCSVPushButton</tabstop>
   <tabstop>navigationCollapsibleButton</tabstop>
+  <tabstop>imageDetailsTable</tabstop>
+  <tabstop>findUngradedButton</tabstop>
   <tabstop>imagePatchCollapsibleButton</tabstop>
+  <tabstop>imagePatchesTableWidget</tabstop>
+  <tabstop>patchLabelComboBox</tabstop>
+  <tabstop>delPatchPushButton</tabstop>
+  <tabstop>keepPatchPushButton</tabstop>
+  <tabstop>segmentEditorCollapsibleButton</tabstop>
+  <tabstop>showSegmentationCheckBox</tabstop>
+  <tabstop>scrollArea</tabstop>
+  <tabstop>imageNavigationScrollBar</tabstop>
  </tabstops>
  <resources/>
  <connections/>
