--- a/TTSegTool/Resources/UI/TTSegTool.ui
+++ b/TTSegTool/Resources/UI/TTSegTool.ui
@@ -97,6 +97,12 @@
    </item>
    <item>
     <widget class="ctkCollapsibleButton" name="navigationCollapsibleButton">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
      <property name="text">
       <string>Navigation</string>
      </property>
@@ -104,7 +110,7 @@
       <property name="formAlignment">
        <set>Qt::AlignHCenter|Qt::AlignTop</set>
       </property>
-      <item row="0" column="0">
+      <item row="1" column="0">
        <widget class="QScrollBar" name="imageNavigationScrollBar">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Fixed" vsizetype="MinimumExpanding">
@@ -129,7 +135,7 @@
         </property>
        </widget>
       </item>
-      <item row="0" column="1">
+      <item row="1" column="1">
        <widget class="QTableWidget" name="imageDetailsTable">
         <property name="enabled">
          <bool>true</bool>
@@ -142,14 +148,14 @@
         </property>
        </widget>
       </item>
-      <item row="1" column="0">
+      <item row="2" column="0">
        <widget class="QLabel" name="imagePosLabel">
         <property name="text">
          <string>0/0</string>
         </property>
        </widget>
       </item>
-      <item row="2" column="0">
+      <item row="3" column="0">
        <widget class="QToolButton" name="findUngradedButton">
         <property name="toolTip">
          <string>Move to the next ungraded image</string>
@@ -159,10 +165,20 @@
         </property>
        </widget>
       </item>
-      <item row="2" column="1">
+      <item row="3" column="1">
        <widget class="QLabel" name="imageDetailsLabel">
         <property name="text">
          <string>No Images Selected yet</string>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignCenter</set>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="1">
+       <widget class="QPushButton" name="saveMasterFileButton">
+        <property name="text">
+         <string>SAVE CURRENT STATE</string>
         </property>
        </widget>
       </item>
@@ -285,7 +301,7 @@
            <x>0</x>
            <y>0</y>
            <width>498</width>
-           <height>119</height>
+           <height>90</height>
           </rect>
          </property>
          <widget class="qMRMLSegmentEditorWidget" name="SegmentEditorWidget">
