--- a/TTSegTool/Resources/UI/TTSegTool.ui
+++ b/TTSegTool/Resources/UI/TTSegTool.ui
@@ -244,6 +244,22 @@
       <item>
        <layout class="QVBoxLayout" name="verticalLayout_5">
         <item>
+         <widget class="QPushButton" name="startPatchEditModeButton">
+          <property name="styleSheet">
+           <string notr="true">QPushButton {background-color: rgb(85, 170, 0)}</string>
+          </property>
+          <property name="text">
+           <string>    START PATCH  EDIT MODE    </string>
+          </property>
+          <property name="checkable">
+           <bool>true</bool>
+          </property>
+          <property name="flat">
+           <bool>false</bool>
+          </property>
+         </widget>
+        </item>
+        <item>
          <widget class="QComboBox" name="patchLabelComboBox"/>
         </item>
         <item>
