--- a/TTSegTool/Resources/UI/TTSegTool.ui
+++ b/TTSegTool/Resources/UI/TTSegTool.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>538</width>
-    <height>1047</height>
+    <height>1005</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -18,8 +18,8 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
-    <widget class="ctkCollapsibleButton" name="inputsCollapsibleButton">
-     <property name="text">
+    <widget class="ctkCollapsibleButton" name="inputsCollapsibleButton" native="true">
+     <property name="text" stdset="0">
       <string>Inputs</string>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout_4">
@@ -76,7 +76,7 @@
           </widget>
          </item>
          <item row="2" column="1">
-          <widget class="ctkDirectoryButton" name="imageDirButton">
+          <widget class="ctkDirectoryButton" name="imageDirButton" native="true">
            <property name="focusPolicy">
             <enum>Qt::TabFocus</enum>
            </property>
@@ -96,14 +96,14 @@
     </widget>
    </item>
    <item>
-    <widget class="ctkCollapsibleButton" name="navigationCollapsibleButton">
+    <widget class="ctkCollapsibleButton" name="navigationCollapsibleButton" native="true">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
      </property>
-     <property name="text">
+     <property name="text" stdset="0">
       <string>Navigation</string>
      </property>
      <layout class="QFormLayout" name="formLayout_4">
@@ -155,16 +155,6 @@
         </property>
        </widget>
       </item>
-      <item row="3" column="0">
-       <widget class="QToolButton" name="findUngradedButton">
-        <property name="toolTip">
-         <string>Move to the next ungraded image</string>
-        </property>
-        <property name="text">
-         <string>&gt;&gt;</string>
-        </property>
-       </widget>
-      </item>
       <item row="3" column="1">
        <widget class="QLabel" name="imageDetailsLabel">
         <property name="text">
@@ -182,11 +172,28 @@
         </property>
        </widget>
       </item>
+      <item row="3" column="0">
+       <widget class="QToolButton" name="findUngradedButton">
+        <property name="toolTip">
+         <string>Move to the next ungraded image</string>
+        </property>
+        <property name="text">
+         <string>&gt;&gt;</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="0">
+       <widget class="QToolButton" name="findPrevUngradedButton">
+        <property name="text">
+         <string>&lt;&lt;</string>
+        </property>
+       </widget>
+      </item>
      </layout>
     </widget>
    </item>
    <item>
-    <widget class="ctkCollapsibleButton" name="imagePatchCollapsibleButton">
+    <widget class="ctkCollapsibleButton" name="imagePatchCollapsibleButton" native="true">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
        <horstretch>0</horstretch>
@@ -199,10 +206,10 @@
        <height>150</height>
       </size>
      </property>
-     <property name="text">
+     <property name="text" stdset="0">
       <string>Patch Sampling</string>
      </property>
-     <property name="collapsed">
+     <property name="collapsed" stdset="0">
       <bool>false</bool>
      </property>
      <layout class="QHBoxLayout" name="horizontalLayout_2">
@@ -282,17 +289,17 @@
     </widget>
    </item>
    <item>
-    <widget class="ctkCollapsibleButton" name="segmentEditorCollapsibleButton">
+    <widget class="ctkCollapsibleButton" name="segmentEditorCollapsibleButton" native="true">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Minimum" vsizetype="MinimumExpanding">
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
      </property>
-     <property name="text">
+     <property name="text" stdset="0">
       <string>Segmentation Editor</string>
      </property>
-     <property name="collapsed">
+     <property name="collapsed" stdset="0">
       <bool>false</bool>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout_3">
@@ -317,7 +324,7 @@
        </widget>
       </item>
       <item>
-       <widget class="qMRMLSegmentEditorWidget" name="segmentEditorWidget"/>
+       <widget class="qMRMLSegmentEditorWidget" name="segmentEditorWidget" native="true"/>
       </item>
      </layout>
     </widget>
@@ -346,6 +353,7 @@
    <class>qMRMLSegmentEditorWidget</class>
    <extends>qMRMLWidget</extends>
    <header>qMRMLSegmentEditorWidget.h</header>
+   <container>1</container>
   </customwidget>
  </customwidgets>
  <tabstops>
@@ -356,7 +364,6 @@
   <tabstop>loadCSVPushButton</tabstop>
   <tabstop>navigationCollapsibleButton</tabstop>
   <tabstop>imageDetailsTable</tabstop>
-  <tabstop>findUngradedButton</tabstop>
   <tabstop>imagePatchCollapsibleButton</tabstop>
   <tabstop>imagePatchesTableWidget</tabstop>
   <tabstop>patchLabelComboBox</tabstop>
